# lifeEngine

./: .gitignore  CMakeLists.txt  README.md  src.rar
Source/Editor/: CMakeLists.txt  Editor.cpp
Source/Editor/Window/: Window_Editor.cpp  Window_Editor.h  Window_Editor.ui
Source/Runtime/Core/: CMakeLists.txt
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/Launcher/: CMakeLists.txt
Source/Runtime/OpenGL4RHI/: CMakeLists.txt
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  audiodevice.cpp  audiodevice.h  audioresource.cpp  audioresource.h  audiosystem.cpp  audiosystem.h  audiosystemfactory.cpp  audiosystemfactory.h  global.cpp  global.h  iaudiosysteminternal.h  listener.cpp  listener.h  resource.rc  sound.cpp  sound.h  soundbuffer.cpp  soundbuffer.h  streamsound.cpp  streamsound.h
src/cmake/: FindAssimp.cmake  FindBullet.cmake  FindFreeImage.cmake  FindFreetype.cmake  FindGLEW.cmake  FindLuaBridge.cmake  FindLuaJIT.cmake  FindNodeEditor.cmake  FindOgg.cmake  FindSDL2.cmake  FindSteamAudio.cmake  FindTCC.cmake  FindVorbis.cmake
src/engine/: CMakeLists.txt  animatedtextureproxy.cpp  animatedtextureproxy.h  baseshader.cpp  baseshader.h  bitset.cpp  bitset.h  bsp.cpp  bsp.h  buildnum.cpp  buildnum.h  buttontranslation.cpp  buttontranslation.h  camera.cpp  camera.h  concmd.cpp  concmd.h  consolesystem.cpp  consolesystem.h  consolesystemfactory.cpp  consolesystemfactory.h  convar.cpp  convar.h  engine.cpp  engine.h  enginefactory.cpp  enginefactory.h  fontfreetype.cpp  fontfreetype.h  frustum.cpp  frustum.h  global.cpp  global.h  iconsolesysteminternal.h  iengineinternal.h  iinputsysteminternal.h  imaterialinternal.h  imaterialsysteminternal.h  inputsystem.cpp  inputsystem.h  (+61 more)
src/engine/proxes/: animatedtextureproxy.cpp  animatedtextureproxy.h  sineproxy.cpp  sineproxy.h
src/engine/scripts_api/: consolesystem.cpp  consolesystem.h  inputsystem.cpp  inputsystem.h  model.cpp  model.h
src/engine/scriptsapi/: luabuttoncode.cpp  luabuttoncode.h  luacamera.cpp  luacamera.h  luaconsolesystem.cpp  luaenum.h  luaimage.cpp  luaimage.h  luainputsystem.cpp  luainputsystem.h  luaresourcesystem.cpp  luaresourcesystem.h  luavector2d.cpp  luavector2d.h  luavector3d.cpp  luavector3d.h  luavector4d.cpp  luavector4d.h  luawindow.cpp  luawindow.h  scriptsapi.h
src/engine/shaders/: baseshader.cpp  baseshader.h  lightmappedgeneric.cpp  lightmappedgeneric.h  spritegeneric.cpp  spritegeneric.h  textgeneric.cpp  textgeneric.h  unlitgeneric.cpp  unlitgeneric.h
src/launcher/: CMakeLists.txt  launcher_unix.cpp  launcher_win32.cpp  resource.aps  resource.h  resource.rc
src/materialsystem/: CMakeLists.txt  global.cpp  global.h  imaterialinternal.h  imaterialsysteminternal.h  material.cpp  material.h  materialsystem.cpp  materialsystem.h  materialsystemfactory.cpp  materialsystemfactory.h  materialvar.cpp  materialvar.h
src/physics/: CMakeLists.txt  body.cpp  body.h  charactercontroller.cpp  charactercontroller.h  collider.cpp  collider.h  debugdrawer.cpp  debugdrawer.h  global.cpp  global.h  iphysicssysteminternal.h  physicsmodel.cpp  physicsmodel.h  physicssystem.cpp  physicssystem.h  physicssystemfactory.cpp  physicssystemfactory.h  resource.rc
src/private/audio/: istreamsoundinternal.h
src/private/engine/: iengineinternal.h  iresourcesysteminternal.h  iwindowinternal.h
src/public/audio/: iaudiosystem.h  isound.h  isoundbuffer.h  istreamsound.h  soundstatus.h
src/public/common/: buttoncode.h  configurations.h  event.h  gameinfo.h  image.h  keyboardkey.h  meshdescriptor.h  meshsurface.h  mousekey.h  shaderdescriptor.h  shaderparaminfo.h  types.h  version.h
src/public/engine/: collisionmesh.h  iappsystem.h  icamera.h  iconcmd.h  iconsolesystem.h  iconvar.h  iengine.h  ientity.h  ifactory.h  ifont.h  igame.h  iinputsystem.h  ilevel.h  imaterial.h  imaterialmanager.h  imaterialproxy.h  imaterialproxyfactory.h  imaterialproxyvar.h  imodel.h  iparser.h  iparsergpuprogram.h  iparserphysicsmodel.h  iparserscript.h  iparsersoundbuffer.h  iparsertexture.h  ireferenceobject.h  iresourcesystem.h  iscript.h  iscriptsystem.h  ishader.h  ishaderfactory.h  ishaderparameter.h  isprite.h  istudiorender.h  itext.h  itransformable.h  iwindow.h  lifeengine.h  materialproxydescriptor.h  materialproxyvarinfo.h  (+1 more)
src/public/game/: igamemode.h
src/public/materialsystem/: imaterial.h  imaterialsystem.h  imaterialvar.h
src/public/physics/: ibody.h  icharactercontroller.h  icollider.h  iphysicsmodel.h  iphysicssystem.h  shapecylinderdescriptor.h  shapemeshdescriptor.h
src/public/stdshaders/: ishader.h  ishaderdll.h
src/public/studiorender/: igpuprogram.h  ilight.h  imaterial.h  imesh.h  ipointlight.h  ishadermanager.h  ishaderparameter.h  ispotlight.h  istudiorender.h  istudiorenderinfo.h  istudiorenderpass.h  istudiorendertechnique.h  itexture.h  studiorenderdeviceconfigurations.h  studiorendersampler.h  studiovertexelement.h  studiovertexformat.h
src/stdshaders/: CMakeLists.txt  baseshader.cpp  baseshader.h  global.cpp  global.h  lightmappedgeneric.cpp  lightmappedgeneric.h  resource.rc  shaderdll.cpp  shaderdll.h  spritegeneric.cpp  spritegeneric.h  testshader.cpp  testshader.h  textgeneric.cpp  textgeneric.h  unlitgeneric.cpp  unlitgeneric.h
src/stdshaders/glsl/: testshader_fragment.glsl  testshader_vertex.glsl  textgeneric_fragment.glsl  textgeneric_vertex.glsl  unlitgeneric_fragment.glsl
src/studiorender/: CMakeLists.txt  baseprimitive.cpp  baseprimitive.h  baseshader.cpp  baseshader.h  cone.cpp  cone.h  directionallight.cpp  directionallight.h  gbuffer.cpp  gbuffer.h  global.cpp  global.h  gpuprogram.cpp  gpuprogram.h  indexbufferobject.cpp  indexbufferobject.h  istudiorenderinternal.h  lightmappedgeneric.cpp  material.cpp  material.h  mesh.cpp  mesh.h  openglstate.cpp  openglstate.h  paths.h.in  pointlight.cpp  pointlight.h  quad.cpp  quad.h  rendercontext.cpp  rendercontext.h  renderobject.h  resource.rc  scenedescriptor.h  settingscontext.h  shader_depth.cpp  shader_lighting.cpp  shader_postprocess.cpp  shaderlighting.cpp  (+39 more)
src/studiorender/mesh_primitives/: meshcone.h  (+2 more)
(+580 files in other folders)
